--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applied Data Science Capstone peer graded assignment 1 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import libraries "
+   ]
+  },
+  {
+ "cells": [
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
