--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -11,24 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import libraries "
-   ]
-  },
-  {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\"This notebook will be mainly used for the Capstone Project\"\"\""
+    "#### Import the libraries "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -36,8 +27,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the following the statement: Hello Capstone Project Course!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,9 +67,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 2
 }
+ 
